refactor: update message, format and java 21 methods